@@ -17,14 +17,14 @@ package com.v2soft.V2AndLib.demoapp.ui.activities;
 
 import java.io.File;
 
+import com.v2soft.V2AndLib.demoapp.R;
+
 import android.app.Activity;
 import android.content.Intent;
 import android.net.Uri;
 import android.os.Bundle;
 import android.view.View;
 import android.view.View.OnClickListener;
-
-import com.v2soft.AndLib.ui.R;
 
 /**
  * Google Cloud printing sample
