@@ -1,4 +1,8 @@
+January 2013
+- BackLoadingAdapter inheritors now can use custom load indicator
+
 Something new in December 2012
 - com.v2soft.AndLib.ui.fonts.FontMager - class for managing custom application fonts
 - com.v2soft.AndLib.ui.views.TextViewWithFont - TextView inhariter that allows to change font
 - com.v2soft.AndLib.ui.animations.SimpleAnimationUtils - helper class for animations
+- com.v2soft.AndLib.ui.dataproviders.TaskExecutorLoader - Loader that can be used to execute ITask objects.
